--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -19,7 +19,7 @@
     background: none;
     font-size: $font-size-small;
     .slick-pager-status.with-filter, .slick-pager-clear-filter {
-      color: $filter-green;
+      color: $filter-color;
       .material-icons {
         font-size: $font-size-middle;
         padding-top: 1px;
