--- a/app/assets/stylesheets/grid.tabel.header.scss
+++ b/app/assets/stylesheets/grid.tabel.header.scss
@@ -3,42 +3,42 @@
 /* Grid Column Headers */
 
 .slick-header-column.ui-state-default {
-  height: 44px;
+  height: $slick-header-height;
   border: none;
   position: relative;
 }
 
 .slick-header {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: $slick-header-padding;
+  padding-bottom: $slick-header-padding;
   .slick-header-column.input-field {
     &.slick-header-column-sorted {
       font-style: normal;
     }
     label {
       top: 15px;
-      font-size: 0.9rem;
+      font-size: $font-size-small;
     }
     input[type=text] {
       margin-bottom: none;
       border-bottom: none;
-      height: 36px;
-      color: grey;
+      height: $filter-height;
+      color: $slick-header-color;
     }
     input[type=text]:focus:not([readonly]) {
-      box-shadow: 0 1.5px 0 0 $filter-green;
-      font-size: 12px;
+      box-shadow: 0 1.5px 0 0 $filter-color;
+      font-size: $font-size-small;
       margin-left: -2px;
     }
     input[type=text]:focus:not([readonly]) + label {
-      color: $filter-green;
+      color: $filter-color;
     }
     .slick-sort-indicator, .slick-drag-indicator {
       display: block;
       position: absolute;
       i.material-icons {
-        font-size: 14px;
-        color: grey;
+        font-size: $font-size-small;
+        color: $slick-header-color;
       }
     }
     .slick-sort-indicator {
@@ -47,13 +47,13 @@
       top: 22px;
       cursor: pointer;
       i.material-icons {
-        background-color: white;
+        background-color: $slick-header-bg-color;
       }
     }
     .slick-drag-indicator {
       right: 10px;
       top: 28px;
-      background-color: white;
+      background-color: $slick-header-bg-color;
       cursor: move;
       i.material-icons {
         transform: rotate(90deg);
@@ -61,7 +61,7 @@
     }
     .slick-resizable-handle {
       width: 10px;
-      background-color: white;
+      background-color: $slick-header-bg-color;
     }
   }
   .progress {
