REFACTOR #70955 - Using variables for menu.scss

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -1,7 +1,7 @@
 @import "base";
 
 body {
-  background: $background_color;
+  background: $body-bg-color;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   margin: 0;
 }
