--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,18 +1,6 @@
 @import "mixins";
 @import 'materialize/components/color';
 
-$margin: 10px;
-$app_title_color: #9a9a9c;
-
-$menu_background_color: #efeff0;
-$menu_text_color: #5d5957;
-$menu_header_color: #5d5957;
-$menu_item_active_background: #092c51;
-$menu_item_active_background: #4f81c8;
-$menu_item_active_text: white;
-
-$default_text_color: #333333;
-
 // Common
 
 $main-color: color('blue', 'base');
@@ -23,9 +11,9 @@ $font-size-large: 20px;
 
 // Content
 
+$body-bg-color: white;
 $nav-height: 48px;
 $menu-width: 250px;
-$background_color: white;
 
 // Screen Content
 
@@ -44,6 +32,13 @@ $notification-box-shadow: 1px 2px 5px black;
 // Confirm & Error Modal
 
 $info-modal-width: 400px;
+
+// Menu
+
+$menu-padding: 10px;
+$menu-item-color: color('grey', 'darken-2');
+$menu-item-active-color: $main-color;
+$menu-border-color: color('grey', 'lighten-2');
 
 // Form
 
