--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -53,7 +53,7 @@
   position: absolute;
   background: $grid-editor-textarea-editor-bg-color;
   padding: $grid-editor-textarea-editor-padding;
-  box-shadow: $grid-editor-textarea-editor-box-shadow;
+  box-shadow: $box-shadow;
 }
 
 .textarea-in-grid {
