--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,7 @@
 @import 'base';
 
+// Common
+
 form {
   .field_error {
     color: $error-color;
@@ -14,6 +16,8 @@ form {
     color: $error-color;
   }
 }
+
+// Create/Edit Form
 
 .create_form {
   h5.title {
@@ -37,6 +41,8 @@ form {
     padding: $form-submit-padding 0;
   }
 }
+
+// Attach(Add Detail) Form
 
 .attach-modal.modal.modal-fixed-footer {
   .slick-header-column.input-field label {
