--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -14,7 +14,7 @@
     padding-left: 20px;
     font-size: $font-size-middle;
     font-weight: bold;
-    color: $grid-header-title-color;
+    color: $text-color;
     float: left;
   }
   // Selection Info
@@ -33,7 +33,7 @@
     .btn {
       text-transform: none;
       text-align: left;
-      color: $grid-states-switcher-color;
+      color: $text-color;
       width: $grid-states-switcher-width;
       font-size: $font-size-middle;
       padding: 0 16px;
@@ -44,7 +44,7 @@
     .dropdown-content {
       width: $grid-states-switcher-width;
       li > a {
-        color: $grid-states-switcher-color;
+        color: $text-color;
         font-size: $font-size-middle;
         display: inline-block;
         padding-right: 2px;
