--- a/app/assets/stylesheets/panel.scss
+++ b/app/assets/stylesheets/panel.scss
@@ -5,7 +5,7 @@
   fieldset.panel_wrapper {
     height: 100%;
     margin: 0;
-    border: 1px solid #E0E0E0;
+    border: 1px solid $border-color;
     .panel_btns {
       i {
         cursor: pointer;
@@ -19,13 +19,13 @@
   }
   .panel-header {
     position: relative;
-    height: 40px;
+    height: $panel-header-height;
     h2 {
-      padding-top: 10px;
-      padding-left: 10px;
-      font-size: 16px;
+      padding-top: $panel-header-padding;
+      padding-left: $panel-header-padding;
+      font-size: $font-size-middle;
       font-weight: bold;
-      color: #555555;
+      color: $text-color;
       float: left;
     }
   }
