--- a/app/assets/stylesheets/overrides/chosen.overrides.scss
+++ b/app/assets/stylesheets/overrides/chosen.overrides.scss
@@ -7,13 +7,13 @@
     background: none;
     border: 0;
     .search-choice {
-      border-radius: 1rem;
+      border-radius: 16px;
     }
     .search-field {
       input {
-        height: 1rem;
-        padding: 0.2rem 0.2rem 1rem 0rem;
-        color: black;
+        height: 16px;
+        padding: 3px 3px 16px 0;
+        color: $text-color;
         border: 0;
         box-shadow: none;
       }
@@ -21,19 +21,19 @@
   }
   .chzn-drop {
     z-index: 100000;
-    border: oldlace;
+    border: $border-color;
     border-radius: 0;
     li {
-      padding: 0.5rem 1rem 0.5rem 0.2rem;
+      padding: 8px 16px 8px 3px;
     }
     li.highlighted {
-      color: black;
-      background-color: #eee;
+      color: $text-color;
+      background-color: color('grey', 'lighten-4');
     }
     .chzn-search {
       input {
-        height: 2rem;
-        padding: 0 1.2rem 0 0.2rem;
+        height: 32px;
+        padding: 0 18px 0 3px;
         border: 0;
         background: none;
       }
@@ -51,14 +51,14 @@
     }
   }
   .chzn-single-with-drop {
-    padding-left: 0.2rem;
+    padding-left: 3px;
   }
   .chzn-results li {
     line-height: 125%;
     padding: 5px 7px;
   }
   .chzn-results .disabled {
-    color: #CCC;
+    color: $label-color;
   }
 }
 
@@ -66,8 +66,8 @@
   .chzn-choices {
     .search-field {
       .default {
-        font-size: 13px;
-        color: #444;
+        font-size: $font-size-small;
+        color: $text-color;
       }
     }
   }
