REFACTOR #70955 - Use  instead of MaterializedCSS color setting

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -17,6 +17,10 @@
     padding-left: 3px;
     box-shadow: none;
     font-size: $font-size-small;
+    &.editor-text {
+      border: none !important;
+      box-shadow: none !important;
+    }
   }
   input[type=text]:not(.browser-default) {
     height: 100%;
