--- a/app/assets/stylesheets/overrides/jquery.ui.overrides.scss
+++ b/app/assets/stylesheets/overrides/jquery.ui.overrides.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import 'base';
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
   background: white;
