FEATURE #70784 - Use WulinMaster.config.color_theme as app-wide main color

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -3,7 +3,7 @@
 
 // Common
 
-$main-color: color('blue', 'base');
+$main-color: color(#{$color-theme}, 'base');
 
 $text-color: color('grey', 'darken-2');
 $label-color: color('grey', 'base');
