--- a/app/assets/stylesheets/master.sass.erb
+++ b/app/assets/stylesheets/master.sass.erb
@@ -4,6 +4,8 @@ $secondary-color: color("blue", "base") !default
 @import 'materialize'
 @import 'material_icons'
 
+$color-theme: <%= WulinMaster.config.color_theme %>
+
 @import 'lib/*'
 @import 'lib/SlickGrid/*'
 @import 'overrides/*'
