--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -52,7 +52,7 @@ $panel-header-padding: 10px;
 
 $error-color: color('red', 'base');
 $error-max-width: 85px;
-$form-title-padding: 16px;
+$form-title-margin: 16px;
 $form-submit-padding: 24px;
 
 // Grid Header
