FEATURE #71009 - Grid Edit: Multi Select Layout

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -7,6 +7,7 @@ $main-color: color(#{$color-theme}, 'base');
 
 $text-color: color('grey', 'darken-2');
 $label-color: color('grey', 'base');
+$tag-color: color('grey', 'lighten-1');
 $border-color: color('grey', 'lighten-2');
 $filter-color: color('green', 'base');
 
