--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -34,6 +34,11 @@
   // select
   .chzn-container {
     top: 0;
+    &.chzn-container-multi {
+      .chzn-drop {
+        margin-top: 10px;
+      }
+    }
     .chzn-single {
       box-shadow: none;
       margin-right: 4px;
