--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -14,8 +14,7 @@
     outline: 0 none;
   }
   input[type=text]:focus:not([readonly]) {
-    padding-left: 3px;
-    box-shadow: none;
+    padding-left: 8px;
     font-size: $font-size-small;
     &.editor-text {
       border: none !important;
@@ -23,11 +22,10 @@
     }
   }
   input[type=text]:not(.browser-default) {
-    height: 100%;
-    margin-bottom: 5px;
+    height: 24px;
   }
   .autocomplete-content {
-    margin-top: 2px;
+    margin-top: -12px;
     margin-left: -2px;
     width: 102%;
   }
