FEATURE #71008 - Create/Edit Form: Unify font-size&color for input/textarea

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -28,12 +28,12 @@ form {
     label.active {
       top: 8px;
     }
-    input {
+    input, textarea {
       color: $text-color;
+      font-size: $font-size-small;
     }
     input[type=text]:not(.browser-default) {
       height: 32px;
-      font-size: $font-size-small;
     }
     input[data-date=true] {
       display: block;
