FEATURE #71008 - Create/Edit Form: DateTime input Layout

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -11,6 +11,7 @@ $tag-color: color('grey', 'lighten-1');
 $border-color: color('grey', 'lighten-2');
 $filter-color: color('green', 'base');
 
+$font-size-tiny: 10px;
 $font-size-small: 12px;
 $font-size-middle: 16px;
 $font-size-large: 20px;
